2014-04-05  Gavin Smith  <gavinsmith0123@gmail.com>


	* info/info.c (long_options): Specify that --variable takes an
	argument, like its short equivalent -v.

2014-04-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_search): Remove unnecessary test for
	whether search results have to be recalculated.

2014-03-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (find_diff): increment i in the loop so we
	actually return the intended value.

2014-03-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Info Format Tag Table): ^? not ^_, etc.
	Reported by Gavin Smith, 21 Mar 2014 18:56:27.

2014-03-19  Karl Berry  <karl@gnu.org>

	* util/htmlxref.cnf (gdbint): gone (reported by Ineiev).
	(thales): new.

2014-03-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\headitem): \gdef\headitemcrhook{\nobreak}
	(\headitemcrhook): \relax by default.
	(\multitable) <\everycr>: call it, to try to avoid page breaks
	after heading rows.

2014-03-14  Karl Berry  <karl@gnu.org>

	* tp/texi2any.pl (D=s): handle -D 'var value', as C makeinfo did.
	Based on bug-texinfo mail from Guo Yixuan, 4 Mar 2014 17:29:34 -0500
        (tiny change).
        (makeinfo_help): document it.
        * doc/texinfo.texi (Invoking @t{texi2any}): document it.

2014-02-25  Arnold Robbins  <arnold@skeeve.com>
            Karl Berry  <karl@gnu.org>

	* util/texindex.c (decode_command): increment arg_index again
	after looking at the argument, not before.  This made -o unusable;
	therefore presumably no one has been using it, and it will be dropped.

2014-02-19  Karl Berry  <karl@gnu.org>

	* install-info/tests/ii-0054-*,
	* install-info/tests/Makefile.am (TESTS, EXTRA_DIST): new test 54
	for space in input name.

2014-02-19  Paul Eggert  <eggert@cs.ucla.edu>

	* install-info/install-info.c (open_possibly_compressed_file):
	Work even if the file name contains arbitrary shell
	metacharacters, for example:
	  install-info --info-dir="/d/a b/info" "/d/a b/info/emacs.info.gz"